Broken Split Screen

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -24,44 +24,44 @@ bEnableMouseSmoothing=True
 bEnableFOVScaling=True
 FOVScale=0.011110
 DoubleClickTime=0.200000
--ActionMappings=(ActionName="Jump",Key=SpaceBar,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
--ActionMappings=(ActionName="Jump",Key=Gamepad_FaceButton_Bottom,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
--ActionMappings=(ActionName="Fire",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
--ActionMappings=(ActionName="Fire",Key=Gamepad_RightTrigger,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
--ActionMappings=(ActionName="Flag",Key=None,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="Jump",Key=SpaceBar,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="Jump",Key=Gamepad_FaceButton_Bottom,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="Fire",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="Fire",Key=Gamepad_RightTrigger,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+-ActionMappings=(ActionName="JumpPlayer1",Key=SpaceBar,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+-ActionMappings=(ActionName="FirePhysicalPlayer1",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+-ActionMappings=(ActionName="Flag",Key=X,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+-ActionMappings=(ActionName="Weapon1",Key=One,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+-ActionMappings=(ActionName="Weapon2",Key=Two,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+-ActionMappings=(ActionName="Weapon3",Key=Three,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+-ActionMappings=(ActionName="JumpPlayer2",Key=Gamepad_FaceButton_Bottom,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+-ActionMappings=(ActionName="FirePhysicalPlayer2",Key=Gamepad_RightTrigger,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+-ActionMappings=(ActionName="NextPhysicalPlayer2",Key=None,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="JumpPlayer1",Key=SpaceBar,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="FirePhysicalPlayer1",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Flag",Key=X,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
--AxisMappings=(AxisName="MoveForward",Key=W,Scale=1.000000)
--AxisMappings=(AxisName="MoveForward",Key=S,Scale=-1.000000)
--AxisMappings=(AxisName="MoveForward",Key=Up,Scale=1.000000)
--AxisMappings=(AxisName="MoveForward",Key=Down,Scale=-1.000000)
--AxisMappings=(AxisName="MoveForward",Key=Gamepad_LeftY,Scale=1.000000)
--AxisMappings=(AxisName="MoveRight",Key=A,Scale=-1.000000)
--AxisMappings=(AxisName="MoveRight",Key=D,Scale=1.000000)
--AxisMappings=(AxisName="MoveRight",Key=Gamepad_LeftX,Scale=1.000000)
--AxisMappings=(AxisName="TurnRate",Key=Gamepad_RightX,Scale=1.000000)
--AxisMappings=(AxisName="TurnRate",Key=Left,Scale=-1.000000)
--AxisMappings=(AxisName="TurnRate",Key=Right,Scale=1.000000)
--AxisMappings=(AxisName="Turn",Key=MouseX,Scale=1.000000)
--AxisMappings=(AxisName="LookUpRate",Key=Gamepad_RightY,Scale=1.000000)
--AxisMappings=(AxisName="LookUp",Key=MouseY,Scale=-1.000000)
-+AxisMappings=(AxisName="MoveForward",Key=W,Scale=1.000000)
-+AxisMappings=(AxisName="MoveForward",Key=S,Scale=-1.000000)
-+AxisMappings=(AxisName="MoveForward",Key=Up,Scale=1.000000)
-+AxisMappings=(AxisName="MoveForward",Key=Down,Scale=-1.000000)
-+AxisMappings=(AxisName="MoveForward",Key=Gamepad_LeftY,Scale=1.000000)
-+AxisMappings=(AxisName="MoveRight",Key=A,Scale=-1.000000)
-+AxisMappings=(AxisName="MoveRight",Key=D,Scale=1.000000)
-+AxisMappings=(AxisName="MoveRight",Key=Gamepad_LeftX,Scale=1.000000)
-+AxisMappings=(AxisName="TurnRate",Key=Gamepad_RightX,Scale=1.000000)
-+AxisMappings=(AxisName="TurnRate",Key=Left,Scale=-1.000000)
-+AxisMappings=(AxisName="TurnRate",Key=Right,Scale=1.000000)
-+AxisMappings=(AxisName="Turn",Key=MouseX,Scale=1.000000)
-+AxisMappings=(AxisName="LookUpRate",Key=Gamepad_RightY,Scale=1.000000)
-+AxisMappings=(AxisName="LookUp",Key=MouseY,Scale=-1.000000)
++ActionMappings=(ActionName="Weapon1",Key=One,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Weapon2",Key=Two,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Weapon3",Key=Three,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="JumpPlayer2",Key=Gamepad_FaceButton_Bottom,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="FirePhysicalPlayer2",Key=Gamepad_RightTrigger,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="NextPhysicalPlayer2",Key=Gamepad_RightShoulder,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+-AxisMappings=(AxisName="MoveForwardPlayer1",Key=W,Scale=1.000000)
+-AxisMappings=(AxisName="MoveForwardPlayer1",Key=S,Scale=-1.000000)
+-AxisMappings=(AxisName="MoveRightPlayer1",Key=A,Scale=-1.000000)
+-AxisMappings=(AxisName="MoveRightPlayer1",Key=D,Scale=1.000000)
+-AxisMappings=(AxisName="TurnPlayer1",Key=MouseX,Scale=1.000000)
+-AxisMappings=(AxisName="LookUpPlayer1",Key=MouseY,Scale=-1.000000)
+-AxisMappings=(AxisName="MoveForwardPlayer2",Key=Gamepad_LeftY,Scale=1.000000)
+-AxisMappings=(AxisName="MoveRightPlayer2",Key=Gamepad_LeftX,Scale=1.000000)
+-AxisMappings=(AxisName="TurnPlayer2",Key=Gamepad_RightX,Scale=1.000000)
+-AxisMappings=(AxisName="LookUpPlayer2",Key=Gamepad_RightY,Scale=1.000000)
++AxisMappings=(AxisName="MoveForwardPlayer1",Key=W,Scale=1.000000)
++AxisMappings=(AxisName="MoveForwardPlayer1",Key=S,Scale=-1.000000)
++AxisMappings=(AxisName="MoveRightPlayer1",Key=A,Scale=-1.000000)
++AxisMappings=(AxisName="MoveRightPlayer1",Key=D,Scale=1.000000)
++AxisMappings=(AxisName="TurnPlayer1",Key=MouseX,Scale=1.000000)
++AxisMappings=(AxisName="LookUpPlayer1",Key=MouseY,Scale=-1.000000)
++AxisMappings=(AxisName="MoveForwardPlayer2",Key=Gamepad_LeftY,Scale=1.000000)
++AxisMappings=(AxisName="MoveRightPlayer2",Key=Gamepad_LeftX,Scale=1.000000)
++AxisMappings=(AxisName="TurnPlayer2",Key=Gamepad_RightX,Scale=1.000000)
++AxisMappings=(AxisName="LookUpPlayer2",Key=Gamepad_RightY,Scale=1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
